--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 																<img src="http://www.tapetus.pl/obrazki/n/180075_wiejska-drozka-wies-zboze-pole-trawa.jpg"/>
 																<center class="img-signature">Jakaś wiocha</center>
 																<p>Vivamus fermentum semper porta. Nunc diam velit, adipiscing ut tristique vitae, sagittis vel odio. Maecenas convallis ullamcorper ultricies. Curabitur ornare, ligula semper consectetur sagittis, nisi diam iaculis velit, id fringilla sem nunc vel mi. Nam dictum, odio nec pretium volutpat, arcu ante placerat erat, non tristique elit urna et turpis. Quisque mi metus, ornare sit amet fermentum et, tincidunt et orci. Fusce eget orci a orci congue vestibulum. Ut dolor diam, elementum et vestibulum eu, porttitor vel elit. Curabitur venenatis pulvinar tellus gravida ornare. Sed et erat faucibus nunc euismod ultricies ut id justo. Nullam cursus suscipit nisi, et ultrices justo sodales nec. Fusce venenatis facilisis lectus ac semper. Aliquam at massa ipsum. Quisque bibendum purus convallis nulla ultrices ultricies. Nullam aliquam, mi eu aliquam tincidunt, purus velit laoreet tortor, viverra pretium nisi quam vitae mi. Fusce vel volutpat elit. Nam sagittis nisi dui.</p>
-																<span>Wprowadź jakiś tekst: </span>
-																<input type="text" id="tekscik"></input>
-																<input onclick="wyswietl_tekst();" type="submit" value="OK" id="przycisk"></input>
+																<a name="#textbox"></a><span>Wprowadź jakiś tekst: </span>
+																<form id="textBox" action="#textbox">
+																				<input type="text" id="tekscik"></input>
+																				<input onclick="wyswietl_tekst();" type="submit" value="OK" id="przycisk"></input>
+																</form>
 																<span id="wyswietlone"></span>
 												</div>
 												<div id="footer"></div>
